 (Format: Year/Month/Day)
Changes for 1.0.1:
*07/11/16:
   * Using ToggleDecor from Deco=TAB should hide tabs (thanks Tomas Janousek)
     Window.cc
*07/11/12:
   * Allow arbitrary window patterns for the iconbar mode (Mark)
     - Note: for now, if you match against the current head of a window, it will
       not be updated as expected in the toolbar
     ClientPattern.cc/hh FocusControl.cc/hh IconbarTool.cc/hh FbTk/Subject.cc
     fluxbox.cc, added FocusableList.cc/hh
*07/11/08:
   * Fix crash when cycling focus and window closes, bug #1787345 (Mark)
     FocusControl.cc
*07/11/04:
   * Update autoraise delay on reconfigure (Mark)
     Window.cc
*07/10/31:
   * Move fullscreen windows to normal layer when they lose focus (Mark)
     Window.cc FocusControl.cc
*07/10/24:
   * Fixed some gcc 2.96 compile issues ( Henrik )
     Layer.hh, MinOverlapPlacement.cc, Workspace.cc
   * Introduced (workspacename=...) for pattern matching and changed
     (workspace=...) to use the workspace number, indexed from 0 (Mark)
     ClientPattern.cc/hh
   * Reenabled raising window if window was moved by mouse by 0 pixels (Mathias)
     Window.cc
*07/10/23:
   * Adding/removing workspaces wasn't updating menu (Mark)
     Screen.cc
   * Support remembering maximized, minimized, and fullscreen state (Mark)
     - [Maximized] {yes|no|horz|vert}
     - [Minimized] {yes|no}
     - [Fullscreen] {yes|no}
     - also fixed window placement when remembering head but not position
     Window.cc/hh Remember.cc/hh Screen.cc/hh Ewmh.cc fluxbox-nls.hh
     CurrentWindowCmd.cc
   * Allow negated patterns, e.g. (name!=xterm) (Mark)
     ClientPattern.cc/hh
*07/10/22:
   * Added option "mouse" to client pattern ( Henrik )
     This is usefull for xinerama. For example:
     Mod1 Tab :NextWindow (head=[mouse]) 
     This will cycle focus through windows that are on the same head as 
     the mouse pointer.
     ClientPattern.cc
   * Fixed crash bug at restart. ( Henrik )
     Window.cc